--- a/tampilan.css
+++ b/tampilan.css
@@ -1,10 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
-/* Website template by freewebsitetemplates.com */
 body {/*
 	background: url(../images/bg.jpg);*/
-	background-color:#FFF;
-	color: #ab967f;
+	background-color: #FFF;
+	color:  #010;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	margin: 0;
@@ -27,46 +26,49 @@ p a:hover {
 }
 .header {
 	/*min-height: 300px;*/
-	height:100px;
+	height:110px;
 	width:100%;
 	position: relative;
+	border-bottom-style:solid;
+	border-bottom-color:#400;
+	top: 0;
 }
-.header div.section {
+.header .section {
 	background: none;
 	margin: 0 auto;
 	overflow: hidden;
 	width: 960px;
 }
-.header div.section a {
+.header .section a {
 	display: inline-block;
 	float: left;
 	margin: 21px 0 0;
 }
-.header div.section a .gbr{
-	border-radius:10px;
+.header .section a .gbr{
+	border:0;
 }
-.header div.section ul {
+.header .section ul {
 	float: right;
 	list-style: none;
 	margin: 54px 0 0;
 	padding: 0;
 }
-.header div.section ul li {
+.header .section ul li {
 	float: left;
 }
-.header div.section ul li:hover {
-	background: url(../images/header-bg.png) no-repeat 0 /*-521px*/;
-	border-radius:10px;
+.header .section ul li:hover {
+	background: url(images/background-blog-web.jpg) no-repeat 0 /*-521px*/;
+	border-radius:4px;
 	/*color: #1f1005;*/
 	text-shadow: 0 1px #ffc600;
 }
-.header div.section ul li.current a {
-	/*background: url(images/header-bg.png) no-repeat 0 -521px*/;
-	border-radius:10px;
+.header .section ul li.current a {
+	background: url(images/background-blog-web.jpg) no-repeat /*0 -521px*/;
+	border-radius:4px;
 	/*color: #1f1005;*/
 	text-shadow: 0 1px #ffc600;
 }
-.header div.section ul li a {
+.header .section ul li a {
 	display: block;
 	color: #839a00;
 	float: none;
@@ -84,151 +86,235 @@ p a:hover {
 
 /*====================================================Gambar Utama==========================================================*/
 .utama{
-	background: url(../images/5379918_20130420105612.jpg) repeat-x center top;
-	border-radius:5px;
+	/*background: url(../images/5379918_20130420105612.jpg) repeat-x center top;
+	background-color:#3F0;*/
 	width:98%;
-	height:500px;
-	margin:10px;
+	height:600px;
+	margin:1%;
 }
-
-/*====================================================Menu Login==========================================================*/
-.login{
-	/*background:url(images/header-bg.png) repeat-x center top;*/
-	width:98%;
-	height:380px;
-	border:medium;
-	border-color:#09F;
-	margin:10px;
-	border-radius:10px;
+.utama #slider ul,.utama #slider li/*,.utama #slider2 ul,.utama #slider2 li*/{
+	margin:0;
+	padding:0;
+	list-style:none;
 }
-.login .formulir{
-	text-align: justify;
-	padding:10px;
-	font-size:16px;
-	margin-left: 20px auto;
-	border-radius:10px;
+/*#slider2{
+	margin-top:1em;
+}*/
+.utama #slider li/*, #slider2 li*/{
+	width:1324px;
+	height:600px;
+	overflow:hidden; 
 }
-.login .formulir .signin{
-	padding:15px;
-	background:url(../images/bg-pattern.jpg) repeat-x center top;
-	float: right;
-	width:47%;
-	border-radius:10px;
+.utama #slider .daftar{
+	float:right;
+	width:20%;
+	background-color:#010 transparent;
 }
-.login .formulir .signup{
-	padding:15px;
-	background: url(../images/bg-pattern.jpg) repeat-x center top;
-	float: left;	
-	width:47%;
-	border-radius:10px;
-}
-.login .formulir input{
-	border-radius:10px;
+/*.utama .signup{
+	float:right;
+	border:0;
+	border-radius:6px;
+	background-color:#555;
+	width:310px;
+	height:540px;
+	padding:8px;
 	text-align:justify;
-	padding:10px;
-	font-size:24px;
-	margin-bottom:25px;
-	margin-left:10px;
-	width:50%;
-	border-color:#CC6;
-	background:#DDD;
-	font-family:Verdana, Geneva, sans-serif;
-	size:30px;	
-}
-.login .formulir h2.daftar{
-	background: url(../images/background-blog-web.jpg);
-	border-radius:10px;
-	margin:10px;
-	width:360px;
-	height:60px;
-	text-align:center;
-	font-size:36px;
-	padding-top:20px;
-}
-
-.login .formulir h2.daftar:hover{
-	background: url(../images/bg-header2.jpg);
-	border-radius:10px;
-	margin:10px;
-	width:360px;
-	height:60px;
-	text-align:center;
-	font-size:36px;
-	padding-top:20px;
-}
-
-/*====================================================Menu Event==========================================================*/
-/*.menuevent{
-	background:url(images/background-blog-web.jpg) repeat-x center top;
-	width:98%;
-	height:200px;
-	border-radius:10px;
-	margin: 10px;
+	font-size:14px;
 }*/
-.bawah{
-	background: none repeat-x center top;
-	text-align: center;
-	/*list-style-position:outside;*/
-}
-/*.bawah .judevent{
-	background: url(../images/headerBg-1.jpg) repeat-x left top;
+
+/*====================================================Login==========================================================*/
+.login{
+	/*background:#111;*/
 	width:100%;
-	border-radius:10px;
+	height:300px;
+	color:#EEE;
+	font-family:Verdana, Geneva, sans-serif;
 }
-.bawah .judevent h2 {
-	color: #EEE;
-	font-size: 34px;
-	line-height: 82px;
-	width: 1200px;
-	margin: 0 auto;
-	/*padding: 0 10px;
-	text-shadow: -3px 0 3px #121413;
-}*/
-.bawah .event {
-	/*background: url(../images/bg_event.jpg) repeat-x center top;*/
-	height: 300px;
-	display: block;
-	list-style: none;
-	width: 1350px;
-	margin: 0 auto;
-	padding: 2px;
+.login .pagar{
+	float:left;
+	width:50%;
 }
-.event li {
+.login .pagar .signin{
+	/*background:#09F;*/
+	float: right;
+	width:75%;
+	margin:0;
+	padding:0;
+}
+.login .pagarkanan{
+	float:right;
+	width:50%;
+}
+.login .pagarkanan .signup{
+	/*background:#09F;*/
+	float:left;
+	width:75%;
+	margin:0;
+	padding:0;
+}
+.judulin{
+	border-bottom:solid;
+	border-bottom-color: #FC0;
 	float: left;
-	width: 220px;
-	margin: 0 13px;
+	margin: 0;
+	height:16px;
+	position: static;
+	width: 98%;
+}
+.judulin h2{
+	background: url(images/header-bg.png);
+	color: #1f1005;
+	font-size: 20px;
+	font-style: italic;
+	height: 34px;
+	margin: 0;
+	position: absolute;
 	text-align: center;
+	text-shadow: 0 1px #ffc600;
+	width: 120px;
+	border-radius:6px;
 }
-.event li img{
-	border-radius:10px;
+.formdaftar{
+	margin:20px;
+	padding:20px;
+	color:#555;
+	font-size:16px;
+	font-style:normal;
 }
-.event li img{
-	color: #51a9e9;
+.formdaftar input{
+	border-radius:6px;
+	width:300px;
+	border:solid;
+	border-color:#F90;
+	font-size:20px;
+	color:#222;
+	margin:5px;
+	padding:4px;
 }
-.event li:hover{
-	color: #51a9e9;
+
+
+/*====================================================Tampilan Event Band==========================================================*/
+.tampil{
+	/*background-color:#6FF;*/
+	width:98%;
+	height:800px;
+	margin-left:1%;
+	margin-right:1%;
+	margin-bottom:5px;
 }
-.event li p{
-	color: #07304d;
+.tampil .garistengah{
+	float:left;
+	width:50%;
+	height:100%;
+}
+.tampil .garistengah .tamevent{
+	/*background:#09F;*/
+	float:right;
+	width:75%;
+	height:100%;
+	/*border-right:solid;
+	border-right-color:#AAA;*/
+}
+.tampil .bagkanan{
+	float:right;
+	width:50%;
+	height:100%;
+}
+.tampil .bagkanan .daftband{
+	/*background:#09F;*/
+	float:left;
+	width:75%;
+	height:100%;
+	margin:0;
+	padding:0;
+}
+
+.titel{
+	border-bottom:solid;
+	border-bottom-color: #FC0;
+	float: left;
+	margin: 0;
+	height:20px;
+	position: static;
+	width: 98%;
+}
+.titel h2{
+	background: url(images/header-bg.png);
+	color: #1f1005;
+	font-size: 22px;
+	font-style: italic;
+	height: 40px;
+	margin: 0;
+	position: absolute;
+	text-align: center;
+	text-shadow: 0 1px #ffc600;
+	width: 100px;
+	border-radius:6px;
+}
+
+/*====================================================footer==========================================================*/
+.footer {
+	/*min-height: 300px;*/
+	float:left;
+	background:#000;
+	height:80px;
+	width:98%;
+	padding:1%;
+}
+.footer div.secti {
+	background: none;
+	margin: 0 auto;
+	overflow: hidden;
+	width: 96%;
+}
+.footer div.secti a {
+	display: inline-blok;
+	float: left;
+	margin:0;
+}
+.footer div.secti ul {
+	float: left;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.footer div.secti ul li {
+	float: left;
+}
+.footer div.secti ul li:hover {
+	color: #FFC;
+	text-shadow: 0 1px #CCC;
+}
+.footer div.secti ul li.pilih a {
+	text-shadow: 0 1px #CCC;
+}
+.footer div.secti ul li a {
+	display:list-item;
+	color:  #FFF;
+	float: none;
+	font-size: 13px;
+	height: 49px;
+	line-height: 49px;
+	margin: 0;
+	text-align: center;
 	text-decoration: none;
+	text-transform: capitalize;
+	width: 400px;
 }
-.event li h3 {
-	color: #07304d;
-	font-size: 18px;
-	margin: 18px 0;
-}
-.event li h3 a {
-	color: #07304d;
-	text-decoration: none;
-}
-.event li h3 a:hover {
-	color: #51a9e9;
+
+/*====================================================Copyright All Reserved==========================================================*/
+.bawah{
+	background: #000;
+	float:left;
+	width:100%;
+	/*text-align: center;
+	list-style-position:outside;*/
 }
 .bawah .copy{
-	height:30px;
+	height:10px;
 	float: left;
 	display: inline-block;
-	color: #03436f;
+	color: #EEE;
 	text-align:center;
 	width: 1350px;
 	/*margin-right: 10px;*/
@@ -236,154 +322,116 @@ p a:hover {
 
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<Tampilan event.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
-/*===========================================================Utama event============================================================*/
-.eventutama{
-	background:none repeat-x center top;
+/*====================================================Menu Event==========================================================*/
+.event{
+	/*background:#999;*/
 	width:98%;
-	margin:10px;
-	padding:8px;
-	border-radius:10px;
+	margin:1%;
 }
-.eventutama .eventberita{
+.event .namaevent{
 	float:left;
-	background:url(../images/Abstract%20grunge%20music%20background%20with%20retro%20microphone-PREVIEW.jpg);
-	width:75%;
-	border-radius:10px;
-	padding:10px;
-	font-size: 16px;
-	color:#EEE;
-	text-align:justify;
-	margin-bottom:10px;
-}
-
-/*===========================================================Sponsor event============================================================*/
-.eventutama .sponsor{
-	background-color:#fff;
-	border:1px solid #dfe1e4;
-	border-radius:10px;
-	float:right;
-	width:21%;
-	height:auto;
+	/*background:#3CF;*/
+	width:25%;
 	height:600px;
-	margin:10px;
+	/*border-right-style:  solid;
+	border-right-color: #900;*/
+	margin-right:5px;
+	padding-right:5px;
+	margin-bottom:5px;
 }
-.eventutama .sponsor ul {
-	list-style:none;
-	margin:0;
-	overflow:hidden;
-	padding:13px 0 0;
-}
-.eventutama .sponsor ul li/*:first-child*/ {
-	border:0;
-	float:none;
-	padding-top:41px;
-	width:auto;
-}/*
-.eventutama .sponsor ul li {
-	border-left:1px solid #DFE1E4;
-	border-top:1px solid #DFE1E4;
+.event .penjelasan{
 	float:left;
-	margin:0 0 0 -1px;
-	min-height:231px;
-	padding:39px 13px 0 20px;
-	position:relative;
-	width:130px;
-}
-.eventutama .sponsor ul li span {
-	border-bottom:2px solid #ff8b00;
-	color:#6b7073;
-	display:inline;
+	/*background:#E00;*/
+	width:53%;
+	text-align:justify;
+	color: #010;
 	font-size:14px;
-	left:0;
-	letter-spacing:.05em;
-	line-height:24px;
-	padding:0 0 1px 17px;
-	position:absolute;
-	top:0;
-	width:70px;
-}*/
-.eventutama .sponsor ul li h2 {
-	color:#444;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	font-size:14px;
-	font-weight:400;
-	letter-spacing:.05em;
-	line-height:24px;
-	margin:0 0 5px;
+	margin-bottom:5px;
 }
-.eventutama .sponsor ul li a {
-	display:inline;
-	text-decoration:underline;
+.event .sponsor{
+	float:left;
+	/*background: #F3F;*/
+	width:20%;
+	height:600px;
+	/*border-left-style: solid;
+	border-left-color: #900;*/
+	margin-left:5px;
+	padding-left:5px;
+	margin-bottom:5px;
 }
-.eventutama .sponsor ul li p {
-	margin:12px 0 25px;
-}
-.eventutama .sponsor ul li a .more {
-	display:inline;
-	font-size:14px;
-	text-decoration:none;
-}
-.eventutama .sponsor a {
-	border-top:1px solid #DFE1E4;
-	color:#6b7073;
-	display:block;
-	font-size:12px;
-	letter-spacing:.05em;
-	line-height:18px;
-	padding:7px 0;
-	text-align:center;
-	text-decoration:none;
-}
-
-
+	
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<Tampilan profil.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
-/*===========================================================Utama profil============================================================*/
-.profilutama{
-	background:url(../images/256317_256598307777307_2048407688_o.jpg) repeat-x center top;
+/*====================================================Menu Event==========================================================*/
+.band{
+	/*background:#999;*/
 	width:98%;
-	border-radius:10px;
-	height:200px;
-	margin:10px;
+	margin:1%;
 }
-
-/*===========================================================profil band============================================================*/
-.bandprof{
-	background:url(../images/582051210632301.jpg);
-	width:100%;
-	border-color:#006;
-	border-bottom-style:dotted;	
-}
-.bandprof .bandprofil{
-	background:url(../images/bg-header2.jpg) scroll bottom;
-	width:20%;
-	margin:10px;
+.band .daftarband{
+	float:left;
+	/*background:#3CF;*/
+	width:25%;
 	height:600px;
-	border-radius:10px;
+	margin-right:5px;
+	padding-right:5px;
+	/*border-right: solid;
+	border-right-color:#006;*/
 }
-.bandprof .bandisi{
-	background:url(../images/AAA-INDIE.jpg);
-	width:76%;	
-	border-radius:10px;
-	margin:10px;
+.band .status{
+	float:right;
+	width:74%;
+	height:120px;
+	/*border-bottom-style: solid;
+	border-bottom-color: #700;*/
+	margin-bottom:5px;
+	padding-bottom:5px;
 }
-.bandprof .bandisi .bandlagu{
-	background:#006;
-	border-radius:10px;	
-	width:98%;
-	margin:10px;
+.band .lagu{
+	float:right;
+	/*background:#E00;*/
+	width:74%;
+	height:400px;
+	/*border-bottom-style: solid;
+	border-bottom-color: #700;*/
+	margin-bottom:5px;
+	padding-bottom:5px;
 }
-
+.band .photo{
+	float:right;
+	/*background: #939;*/
+	width:74%;
+	height:600px;
+	margin-bottom:8px;
+}
 
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<Tampilan contact.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 /*===========================================================Tampilan============================================================*/
+.garis{
+	background: url(images/bg-header2.jpg);
+	color:#FFF;
+	width:98%;
+	border-radius:3px;
+	text-align:center;
+	font-size:12px;
+	margin-right:1%;
+	margin-left:1%;
+	margin-bottom:5px;
+}
 .contents .contact {
 	min-height: 500px;
+	/*background:url(images/images.jpeg);*/
+	margin-left:1%;
+	margin-right:1%;
+	margin-bottom:5px;
+	padding:20px;
 }
 .contact form {
 	width: 605px;
 	margin: 0 0 30px;
+	width:98%;
+	font-size:30px;
 }
 .contact label {
 	display: inline-block;
@@ -433,6 +481,115 @@ p a:hover {
 .contact input .btn:hover {
 	background-color: #d9e5a9;
 }
+
+/*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<arf.html,dit.html,krai.html,chr.html,about.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+
+/*====================================================tampilan==========================================================*/
+.list{
+	background:  url(images/bg-header2.jpg);
+	color:#FFF;
+	width:98%;
+	margin-top:0;
+	margin-right:1%;
+	margin-left:1%;
+	margin-bottom:5px;
+	border-radius:3px;
+	text-align:center;
+	font-size:12px;
+	padding:0;
+}
+.profus{
+	/*background-color:#6FF;*/
+	width:98%;
+	/*height:800px;*/
+	margin-left:1%;
+	margin-right:1%;
+	margin-bottom:5px;
+}
+.profus .tengah{
+	float:left;
+	width:50%;
+	margin-bottom:5px;
+	/*height:100%;*/
+}
+.profus .tengah .identitas{
+	/*background:#09F;*/
+	float:right;
+	width:75%;
+	margin-bottom:5px;
+	/*height:100%;*/
+}
+.profus .tengah .identitas .imgs{
+	border-style: solid;
+	/*width:100%;*/
+	height:300px;
+	border-color:#000;
+	margin-bottom:5px;
+	border-radius:8px;
+}
+.profus .bagikanan{
+	float:right;
+	width:50%;
+	margin-bottom:5px;
+	/*height:100%;*/
+}
+.profus .bagikanan .idenlengkap{
+	background: url(images/background-blog-web.jpg);
+	float:left;
+	width:75%;
+	color:#FFF;
+	text-align:justify;
+	font:Georgia, "Times New Roman", Times, serif;
+	font-size:16px;
+	/*height:100%;*/
+	margin:0;
+	padding:10px;
+	margin-bottom:5px;
+	border-radius:8px;
+}
+.profus .bagikanan .idenlengkap .grs{
+	border-style:solid;
+	border-color: #900;
+	margin-bottom:10px;
+	margin-top:10px;
+}
+
+
+/*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<login_profil.html, login_setting.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+
+/*===========================================================header============================================================*/
+.headerfix{
+	width: 800px;
+	height: 129px;
+	position: absolute;
+	padding: 0;
+}
+ul.menu {list-style:none; margin:0; padding:0;}
+ul.menu * {margin:0; padding:0;}
+ul.menu a {display:block; color:#000; text-decoration:none; font-family: verdana;}
+ul.menu li {position:relative; float:left; margin-right:0;}
+ul.menu ul {position:absolute; top:0; left:0; background:#d1d1d1; display:none; opacity:0; list-style:none;}
+ul.menu ul li {position:relative; width:130px; margin:0;}
+ul.menu ul li a {display:block; padding:0; background:url(images/bg-pattern.jpg);}
+ul.menu ul li a:hover { background:url(images/background-blog-web.jpg);}
+ul.menu .menulink {border:1px solid #aaa; padding:0; font-weight:bold; background-color:#FFF transparent; width:0;}
+ul.menu .menulink:hover, ul.menu .menuhover {background: #996;}
+.setting{
+	background:#DDD;
+	width:94%;
+	margin:1%;
+	padding:2%;
+	border-radius:10px;
+	height:400px;
+}
+
+
+
+
+
+
+
+
 
 
 
