--- a/tampilan.css
+++ b/tampilan.css
@@ -18,19 +18,13 @@ a {
 img {
 	border: 0;
 }
-p a {
-	color: #ab967f;
-}
-p a:hover {
-	color: #ff8400;
-}
 .header {
 	/*min-height: 300px;*/
 	height:110px;
 	width:100%;
 	position: relative;
-	border-bottom-style:solid;
-	border-bottom-color:#400;
+	/*border-bottom-style:solid;
+	border-bottom-color:#400;*/
 	top: 0;
 }
 .header .section {
@@ -57,20 +51,21 @@ p a:hover {
 	float: left;
 }
 .header .section ul li:hover {
-	background: url(images/background-blog-web.jpg) no-repeat 0 /*-521px*/;
 	border-radius:4px;
+	border-bottom: groove;
+	border-bottom-color:#F63;
 	/*color: #1f1005;*/
-	text-shadow: 0 1px #ffc600;
+	text-shadow: 0 1px #F90;
 }
 .header .section ul li.current a {
-	background: url(images/background-blog-web.jpg) no-repeat /*0 -521px*/;
+	background: url(images/beautiful-background-20.jpg) no-repeat;
 	border-radius:4px;
 	/*color: #1f1005;*/
-	text-shadow: 0 1px #ffc600;
+	text-shadow: 0 1px #F90;
 }
 .header .section ul li a {
 	display: block;
-	color: #839a00;
+	color:#C30;
 	float: none;
 	font-size: 16px;
 	height: 49px;
@@ -124,11 +119,13 @@ p a:hover {
 
 /*====================================================Login==========================================================*/
 .login{
-	/*background:#111;*/
+	background: url(images/header%20background.jpg) center;
 	width:100%;
-	height:300px;
-	color:#EEE;
+	height:350px;
+	color:#330;
 	font-family:Verdana, Geneva, sans-serif;
+	margin-bottom:10px;
+	padding-top:10px;
 }
 .login .pagar{
 	float:left;
@@ -175,27 +172,34 @@ p a:hover {
 	border-radius:6px;
 }
 .formdaftar{
+	background: rgba(0,0,0,0.9);
 	margin:20px;
 	padding:20px;
-	color:#555;
+	color:#9FF;
+	font-family:Verdana, Geneva, sans-serif;
 	font-size:16px;
-	font-style:normal;
+	font-style:italic;
+	border-radius:6px;
 }
 .formdaftar input{
 	border-radius:6px;
 	width:300px;
 	border:solid;
-	border-color:#F90;
+	border-color:#000;
 	font-size:20px;
 	color:#222;
 	margin:5px;
 	padding:4px;
 }
+.formdaftar input .klik{
+	background:url(images/header-bg.jpg);
+	border-radius:6px;	
+}
 
 
 /*====================================================Tampilan Event Band==========================================================*/
 .tampil{
-	/*background-color:#6FF;*/
+	/*background:url(images/A_Website_Background.png);*/
 	width:98%;
 	height:800px;
 	margin-left:1%;
@@ -251,13 +255,30 @@ p a:hover {
 	width: 100px;
 	border-radius:6px;
 }
+.tulisan{
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:16px;
+	color:#777;
+	font-style:normal;
+}
+.more{
+	width:100px;
+	height:40px;
+	font-size:18px;
+	color:#222;
+	border-radius:4px;
+}
+.more:hover{
+	background: url(images/bg-soil.jpg) no-repeat;
+	color:#EEE;
+}
 
 /*====================================================footer==========================================================*/
 .footer {
 	/*min-height: 300px;*/
 	float:left;
 	background:#000;
-	height:80px;
+	height:50px;
 	width:98%;
 	padding:1%;
 }
@@ -265,7 +286,8 @@ p a:hover {
 	background: none;
 	margin: 0 auto;
 	overflow: hidden;
-	width: 96%;
+	width: 60%;
+	float:right;
 }
 .footer div.secti a {
 	display: inline-blok;
@@ -293,14 +315,51 @@ p a:hover {
 	color:  #FFF;
 	float: none;
 	font-size: 13px;
-	height: 49px;
-	line-height: 49px;
+	height: 30px;
+	line-height: 20px;
 	margin: 0;
 	text-align: center;
 	text-decoration: none;
 	text-transform: capitalize;
-	width: 400px;
+	width: 220px;
 }
+.footer .snetwork{
+	background:none;
+	float:left;
+	height:20px;
+	width:100px;
+}
+/*====================================================Koneksi Sosial Media=============================================================*/
+
+.connect a {
+	background:url(images/iconss.png);
+	float:left;
+	/*display: inline-block;*/
+	height: 33px;
+	margin: 10px 12px; 
+}
+.connect a.facebook {
+	background-position: -46px -112px;
+	width: 33px;
+}
+.connect a.googleplus {
+	background-position: -46px -153px;
+	width: 34px;
+}
+.connect a.twitter {
+	background-position: -46px -194px;
+	width: 40px;
+}
+.connect a.facebook:hover {
+	background-position: 0 -112px;
+}
+.connect a.googleplus:hover {
+	background-position: 0 -153px;
+}
+.connect a.twitter:hover {
+	background-position: 0 -194px;
+}
+	
 
 /*====================================================Copyright All Reserved==========================================================*/
 .bawah{
@@ -330,18 +389,18 @@ p a:hover {
 }
 .event .namaevent{
 	float:left;
-	/*background:#3CF;*/
+	background:none;
 	width:25%;
 	height:600px;
 	/*border-right-style:  solid;
 	border-right-color: #900;*/
 	margin-right:5px;
+	border-radius:6px;
 	padding-right:5px;
 	margin-bottom:5px;
 }
 .event .penjelasan{
 	float:left;
-	/*background:#E00;*/
 	width:53%;
 	text-align:justify;
 	color: #010;
@@ -350,11 +409,12 @@ p a:hover {
 }
 .event .sponsor{
 	float:left;
-	/*background: #F3F;*/
+	border-radius:4px;
 	width:20%;
-	height:600px;
+	height:500px;
 	/*border-left-style: solid;
 	border-left-color: #900;*/
+	padding-top:5px;
 	margin-left:5px;
 	padding-left:5px;
 	margin-bottom:5px;
@@ -387,6 +447,17 @@ p a:hover {
 	margin-bottom:5px;
 	padding-bottom:5px;
 }
+.band .status .letak{
+	margin-top:20px;
+	background:#111;
+	color:#EEE;
+	font-style:inherit;
+	font-size:14px;
+	border:solid;
+	border-color:#FFF;
+	border-radius:8px;
+	padding:4px;
+}
 .band .lagu{
 	float:right;
 	/*background:#E00;*/
@@ -409,7 +480,7 @@ p a:hover {
 
 /*===========================================================Tampilan============================================================*/
 .garis{
-	background: url(images/bg-header2.jpg);
+	background:url(images/bg-soil.jpg) center;
 	color:#FFF;
 	width:98%;
 	border-radius:3px;
@@ -421,7 +492,10 @@ p a:hover {
 }
 .contents .contact {
 	min-height: 500px;
-	/*background:url(images/images.jpeg);*/
+	background: url(images/white_grey_background_upside_down.jpg) center;
+	border-radius:6px;
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:14px;
 	margin-left:1%;
 	margin-right:1%;
 	margin-bottom:5px;
@@ -464,9 +538,10 @@ p a:hover {
 	padding: 0 4px;
 	overflow: auto;
 	resize: none;
+	border: groove;
 }
-.contact input .btn {
-	background-color: #f1f1cd;
+/*.contact input .btn {
+	background:url(images/bg-pattern.jpg);
 	color: #000;
 	cursor: pointer;
 	font-family: Arial, Helvetica, sans-serif;
@@ -479,14 +554,14 @@ p a:hover {
 	padding: 0 10px;
 }
 .contact input .btn:hover {
-	background-color: #d9e5a9;
-}
+	background: url(images/header-bg.jpg);
+}*/
 
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<arf.html,dit.html,krai.html,chr.html,about.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 /*====================================================tampilan==========================================================*/
 .list{
-	background:  url(images/bg-header2.jpg);
+	background:url(images/bg-soil.jpg) center;
 	color:#FFF;
 	width:98%;
 	margin-top:0;
@@ -553,16 +628,22 @@ p a:hover {
 	margin-bottom:10px;
 	margin-top:10px;
 }
+.bbm{
+	margin-left:46px;
+	width:240px;
+	height:320px;
+	border:solid;
+	border-color:#222;
+	border-radius:10px;
+}
 
-
-/*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<login_profil.html, login_setting.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+/*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<login_member_admin.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
 
 /*===========================================================header============================================================*/
 .headerfix{
 	width: 800px;
 	height: 129px;
 	position: absolute;
-	padding: 0;
 }
 ul.menu {list-style:none; margin:0; padding:0;}
 ul.menu * {margin:0; padding:0;}
@@ -575,13 +656,52 @@ ul.menu ul li a:hover { background:url(images/background-blog-web.jpg);}
 ul.menu .menulink {border:1px solid #aaa; padding:0; font-weight:bold; background-color:#FFF transparent; width:0;}
 ul.menu .menulink:hover, ul.menu .menuhover {background: #996;}
 .setting{
-	background:#DDD;
+	background: url(images/white_grey_background_upside_down.jpg);
 	width:94%;
 	margin:1%;
 	padding:2%;
 	border-radius:10px;
 	height:400px;
 }
+.jarak{
+	height:20px;	
+}
+.jarak1{
+	height:30px;	
+}
+
+
+/*===========================================================Layout Komentar================================================================*/
+.komen{
+	width: 800px;
+	font-family:Verdana, Geneva, sans-serif;
+	height: auto; 
+	background: rgba(255,255,255,0.3);
+	padding-bottom: 1px;
+}
+.tampilkomen{
+	margin-top:20px;
+	font-size: 14px;
+	padding: 7px;
+	margin: 10px;
+	background: rgba(0,0,0,0.9);
+	border-radius: 6px;
+	color: #fff;
+}
+.mail{
+	color:#36F;
+	font-style:italic;
+}
+.nama{
+	color:#F00;
+	font-style:inherit;
+}
+.komentar{
+	background:none;
+	color:#0B0;
+	font-style:italic;
+}
+
 
 
 
