--- a/tampilan.css
+++ b/tampilan.css
@@ -1,13 +1,32 @@
 @charset "utf-8";
 /* CSS Document */
-body {/*
-	background: url(../images/bg.jpg);*/
-	background-color: #FFF;
-	color:  #010;
-	font-family: Arial, Helvetica, sans-serif;
+@font-face {
+	font-family: 'Muli';
+	src: url('../fonts/Muli-Regular.eot');
+	src: local('☺'),  url('../fonts/Muli-Regular.woff') format('woff'),  url('../fonts/Muli-Regular.ttf') format('truetype'),  url('../fonts/Muli-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Muli-Light';
+	src: url('../fonts/Muli-Light.eot');
+	src: local('☺'),  url('../fonts/Muli-Light.woff') format('woff'),  url('../fonts/Muli-Light.ttf') format('truetype'),  url('../fonts/Muli-Light.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'NixieOne';
+	src: url('../fonts/NixieOne-Regular.eot');
+	src: local('☺'),  url('../fonts/NixieOne-Regular.woff') format('woff'),  url('../fonts/NixieOne-Regular.ttf') format('truetype'),  url('../fonts/NixieOne-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+body {
+	background-color: #f6f6f6;
 	font-size: 12px;
 	margin: 0;
 	width:100%;
+	font-family: 'Muli-Light';
 	/*min-width: 960px;*/
 	padding: 0;
 }
@@ -19,13 +38,24 @@ img {
 	border: 0;
 }
 .header {
-	/*min-height: 300px;*/
+	/*background: url(images/shadows.png) repeat-x;
+	min-height: 300px;*/
+	background: url(images/header%20background.jpg);
 	height:110px;
 	width:100%;
 	position: relative;
 	/*border-bottom-style:solid;
 	border-bottom-color:#400;*/
 	top: 0;
+}
+.header span.shadow {
+	background-position: 0 -20px;
+	display: block;
+	height: 8px;
+	width: 100%;
+	position: absolute;
+	bottom: -8px;
+	z-index: 999;
 }
 .header .section {
 	background: none;
@@ -53,19 +83,19 @@ img {
 .header .section ul li:hover {
 	border-radius:4px;
 	border-bottom: groove;
-	border-bottom-color:#F63;
+	border-bottom-color: #EEE;
 	/*color: #1f1005;*/
-	text-shadow: 0 1px #F90;
+	text-shadow: 0 1px #6CF;
 }
 .header .section ul li.current a {
-	background: url(images/beautiful-background-20.jpg) no-repeat;
+	background: url(images/bg-header2.png) no-repeat;
 	border-radius:4px;
 	/*color: #1f1005;*/
-	text-shadow: 0 1px #F90;
+	text-shadow: 0 1px #0F9;
 }
 .header .section ul li a {
 	display: block;
-	color:#C30;
+	color: #FFF;
 	float: none;
 	font-size: 16px;
 	height: 49px;
@@ -119,7 +149,7 @@ img {
 
 /*====================================================Login==========================================================*/
 .login{
-	background: url(images/header%20background.jpg) center;
+	background:#303030;
 	width:100%;
 	height:350px;
 	color:#330;
@@ -172,7 +202,7 @@ img {
 	border-radius:6px;
 }
 .formdaftar{
-	background: rgba(0,0,0,0.9);
+	background: rgba(0,0,0,0.8);
 	margin:20px;
 	padding:20px;
 	color:#9FF;
@@ -187,7 +217,7 @@ img {
 	border:solid;
 	border-color:#000;
 	font-size:20px;
-	color:#222;
+	color:#777;
 	margin:5px;
 	padding:4px;
 }
@@ -199,9 +229,7 @@ img {
 
 /*====================================================Tampilan Event Band==========================================================*/
 .tampil{
-	/*background:url(images/A_Website_Background.png);*/
 	width:98%;
-	height:800px;
 	margin-left:1%;
 	margin-right:1%;
 	margin-bottom:5px;
@@ -209,30 +237,28 @@ img {
 .tampil .garistengah{
 	float:left;
 	width:50%;
-	height:100%;
+	/*height:100%;*/
 }
 .tampil .garistengah .tamevent{
-	/*background:#09F;*/
 	float:right;
 	width:75%;
-	height:100%;
-	/*border-right:solid;
+	/*height:100%;
+	border-right:solid;
 	border-right-color:#AAA;*/
 }
 .tampil .bagkanan{
 	float:right;
 	width:50%;
-	height:100%;
+	/*height:100%;*/
 }
 .tampil .bagkanan .daftband{
 	/*background:#09F;*/
 	float:left;
 	width:75%;
-	height:100%;
+	/*height:100%;*/
 	margin:0;
 	padding:0;
 }
-
 .titel{
 	border-bottom:solid;
 	border-bottom-color: #FC0;
@@ -255,29 +281,37 @@ img {
 	width: 100px;
 	border-radius:6px;
 }
-.tulisan{
-	font-family:Verdana, Geneva, sans-serif;
-	font-size:16px;
-	color:#777;
-	font-style:normal;
-}
-.more{
-	width:100px;
-	height:40px;
-	font-size:18px;
+.barevent{
+	border-radius:8px;
+	padding:10px;
+	height:140px;
+	width:92%;
+	font-family: 'Muli-Light';
+	font-size: 16px;
+	margin-bottom:20px;
 	color:#222;
-	border-radius:4px;
+	font-style:italic;
 }
-.more:hover{
-	background: url(images/bg-soil.jpg) no-repeat;
-	color:#EEE;
+.barevent:hover{
+	background:url(images/header.png);
+	color:#030;	
+}
+.gambarevent{
+	background:url(images/A_Website_Background.png);
+	width:40%;
+	height:140px;
+	border:0;
+	margin-bottom:10px;
+	margin-left:5px;
+	border-radius:6px;
+	margin-right:10px;
 }
 
 /*====================================================footer==========================================================*/
 .footer {
 	/*min-height: 300px;*/
 	float:left;
-	background:#000;
+	background:#303030;
 	height:50px;
 	width:98%;
 	padding:1%;
@@ -363,7 +397,7 @@ img {
 
 /*====================================================Copyright All Reserved==========================================================*/
 .bawah{
-	background: #000;
+	background: #303030;
 	float:left;
 	width:100%;
 	/*text-align: center;
@@ -411,13 +445,13 @@ img {
 	float:left;
 	border-radius:4px;
 	width:20%;
-	height:500px;
-	/*border-left-style: solid;
+	/*height:500px;
+	border-left-style: solid;
 	border-left-color: #900;*/
 	padding-top:5px;
 	margin-left:5px;
 	padding-left:5px;
-	margin-bottom:5px;
+	margin-bottom:20px;
 }
 	
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<Tampilan profil.html>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
@@ -432,7 +466,7 @@ img {
 	float:left;
 	/*background:#3CF;*/
 	width:25%;
-	height:600px;
+	/*height:600px;*/
 	margin-right:5px;
 	padding-right:5px;
 	/*border-right: solid;
@@ -441,7 +475,7 @@ img {
 .band .status{
 	float:right;
 	width:74%;
-	height:120px;
+	/*height:120px;
 	/*border-bottom-style: solid;
 	border-bottom-color: #700;*/
 	margin-bottom:5px;
@@ -462,7 +496,7 @@ img {
 	float:right;
 	/*background:#E00;*/
 	width:74%;
-	height:400px;
+	/*height:400px;
 	/*border-bottom-style: solid;
 	border-bottom-color: #700;*/
 	margin-bottom:5px;
@@ -472,7 +506,7 @@ img {
 	float:right;
 	/*background: #939;*/
 	width:74%;
-	height:600px;
+	/*height:600px;*/
 	margin-bottom:8px;
 }
 
@@ -490,9 +524,11 @@ img {
 	margin-left:1%;
 	margin-bottom:5px;
 }
+.contents{
+	background:url(images/FreelancerMarketplace-35556.png);
+}
 .contents .contact {
 	min-height: 500px;
-	background: url(images/white_grey_background_upside_down.jpg) center;
 	border-radius:6px;
 	font-family:Verdana, Geneva, sans-serif;
 	font-size:14px;
@@ -574,9 +610,7 @@ img {
 	padding:0;
 }
 .profus{
-	/*background-color:#6FF;*/
 	width:98%;
-	/*height:800px;*/
 	margin-left:1%;
 	margin-right:1%;
 	margin-bottom:5px;
@@ -645,23 +679,22 @@ img {
 	height: 129px;
 	position: absolute;
 }
-ul.menu {list-style:none; margin:0; padding:0;}
+ul.menu {list-style:none; margin:0; padding:0; }
 ul.menu * {margin:0; padding:0;}
-ul.menu a {display:block; color:#000; text-decoration:none; font-family: verdana;}
-ul.menu li {position:relative; float:left; margin-right:0;}
-ul.menu ul {position:absolute; top:0; left:0; background:#d1d1d1; display:none; opacity:0; list-style:none;}
-ul.menu ul li {position:relative; width:130px; margin:0;}
-ul.menu ul li a {display:block; padding:0; background:url(images/bg-pattern.jpg);}
-ul.menu ul li a:hover { background:url(images/background-blog-web.jpg);}
-ul.menu .menulink {border:1px solid #aaa; padding:0; font-weight:bold; background-color:#FFF transparent; width:0;}
-ul.menu .menulink:hover, ul.menu .menuhover {background: #996;}
+ul.menu a {display:block; color: #F90; text-decoration:none; font-family: verdana;}
+ul.menu li {position:relative; float:left; margin-right:0; }
+ul.menu ul {position:absolute; top:0; left:0; background: rgba(0,0,0,0.9)  ; display:none; opacity:0; list-style:none;}
+ul.menu ul li {position:relative; margin:0;}
+ul.menu ul li a { padding:0; background: rgba(0,0,0,0.9);}
+ul.menu ul li a:hover { background: url(images/header.png); border:0;}
+ul.menu .menulink {border:1px solid #aaa; padding:0; font-weight:bold; background-color: #CCC transparent; }
+ul.menu .menulink:hover, ul.menu .menuhover {background: rgba(0,0,0,0.5);}
 .setting{
-	background: url(images/white_grey_background_upside_down.jpg);
-	width:94%;
+	/*background: url(images/forum-alte-musik104%7E_v-image512_-6a0b0d9618fb94fd9ee05a84a1099a13ec9d3321.jpg);
+	*/width:94%;
 	margin:1%;
 	padding:2%;
 	border-radius:10px;
-	height:400px;
 }
 .jarak{
 	height:20px;	
@@ -701,8 +734,25 @@ ul.menu .menulink:hover, ul.menu .menuhover {background: #996;}
 	color:#0B0;
 	font-style:italic;
 }
-
-
+.a{
+	background:url(images/header_red.jpg) center;
+	border-radius:4px;
+}
+.a:hover{
+	background:url(images/website-header-red.jpg) center;
+}
+.tambah{
+	padding-top:10px;
+	padding-bottom:10px;
+	padding-left:20px;
+	padding-right:20px;
+	font-size:14px;
+	background:url(images/header_red.jpg) center;
+	border-radius:4px;
+}
+.tambah:hover{
+	background:url(images/website-header-red.jpg) center;
+}
 
 
 
